 * added functionp
 * added simple-string-p
 * added vector support:
   * make-array, vector, vector-length, vectorp, simple-vector-p, svref, svset and svlength
   * list->simple-vector and simple-vector->list
 * added bitvector support:
   * simple-vector-p, sbit, bvset and bvlength
   * list->simple-bit-vector and simple-bit-vector->list

 * mlib: added function map
 * mlib: added generator related functions and macros
   * scan
   * scan-multiple, scan-concat
   * dogenerator

 * fixed backquote expansion:
   e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
 * fixed compiled jmethod
 * fixed mlib: avoid possible stackoverflows when looping over larger sequences
   * remove, remove-if
   * mapcar, maplist, mapc, mapl, mapcan, mapcon
 * fixed mlib: fixed notevery, notany


Changes in JMurmel-1.2.2 relative to JMurmel-1.2.1

 * macroexpansion is no longer done on-the-fly but in a seperate macroexpansion phase.
   This fixes issues with macros being expanded that are actually defined later,
   or expanding the wrong version of a macro that is defined more than once.


Changes in JMurmel-1.2.1 relative to JMurmel-1.2

 * changed the interpreter to expand macros only once
 * changed the compiler so that the restriction "The list containing optional arguments cannot be used
   as an argument to `rplacd`." no longer exists

 * added the commandline argument --script, allow #!...!# as multiline comment to support hashbang scripts.
 * added --final-result and --no-final-result

 * fixed the compiler to tailcall-optimize let/let* dynamic


Changes in JMurmel-1.2 relative to JMurmel-1.1

 * changed/ fixed the behaviour around large numbers, no more silently cutting off decimal places
   when an integral number is needed
 * changed argument to sleep to "seconds" (was: internal-time-units-per-second),
   changed return value to nil (was: actually slept time in internal-time-units-per-second)