@@ -456,7 +456,7 @@ public class LambdaJ {
     private static final class Closure implements Serializable, Writeable {
         private static final long serialVersionUID = 1L;
         final Object params;
-        final ConsCell body, closure;
+        final ConsCell body, closure; // todo es sollten nur macros serialisiert werden. beim serialisieren sollte fuer closure!=topEnv ein fehler geworfen werden, beim einlesen sollte closure=topEnv gesetzt werden
 
         private Closure(Object params, ConsCell body, ConsCell closure)    { this.params = params; this.body = body; this.closure = closure; }
 
@@ -3703,6 +3703,11 @@ public class LambdaJ {
         return c.toString();
     }
 
+    private static CharSequence requireCharsequence(String func, Object c) {
+        if (!(c instanceof CharSequence)) throw new LambdaJError(true, "%s: expected a string argument but got %s", func, printSEx(c));
+        return (CharSequence)c;
+    }
+
     /** Return {@code a} cast to a list, error if {@code a} is not a list or is nil. */
     static ConsCell requireCons(String func, Object a) {
         if (!consp(a)) throw new LambdaJError(true, "%s: expected a cons argument but got %s", func, printSEx(a));
@@ -4381,12 +4386,13 @@ public class LambdaJ {
             env = addBuiltin("stringp",         (Primitive) a -> { oneArg("stringp", a);         return boolResult(stringp(car(a))); },
                   addBuiltin("simple-string-p", (Primitive) a -> { oneArg("simple-string-p", a); return boolResult(sstringp(car(a))); },
                   addBuiltin("characterp",      (Primitive) a -> { oneArg("characterp", a);      return boolResult(characterp(car(a))); },
+                  addBuiltin("char",            (Primitive) a -> { twoArgs("char", a);           return requireCharsequence("char", car(a)).charAt(requireIntegralNumber("char", cadr(a), 0, Integer.MAX_VALUE).intValue()); },
                   addBuiltin("char-code",       (Primitive) a -> { oneArg("char-code", a);       return (long) requireChar("char-code", car(a)); },
                   addBuiltin("code-char",       (Primitive) a -> { oneArg("code-char", a);       return (char) toInt("code-char", car(a)); },
                   addBuiltin("string=",         (Primitive) a -> { twoArgs("string=", a);        return boolResult(Objects.equals(requireStringOrCharOrSymbolOrNull("string=", car(a)), requireStringOrCharOrSymbolOrNull("string=", cadr(a)))); },
                   addBuiltin("string->list",    (Primitive) this::stringToList,
                   addBuiltin("list->string",    (Primitive) a -> { oneArg("list->string", a);    return listToStringImpl(requireList("list->string", car(a))); },
-                  env))))))));
+                  env)))))))));
 
             if (haveUtil()) {
                 env = addBuiltin("format",        (Primitive) this::format,
@@ -5930,6 +5936,8 @@ public class LambdaJ {
 
         public final Object   _bvlength(Object... args)   { oneArg("bvlength", args.length);            return bvlength(args[0]); }
 
+        public final Character _char(Object... args) { twoArgs("char", args.length); return requireCharsequence("char", args[0]).charAt(requireIntegralNumber("char", args[1], 0, Integer.MAX_VALUE).intValue()); }
+
         public final Object   makeArray(Object... args) { varargs1_2("make-array", args.length);
                                                           if (args.length == 1) return new Object[toNonnegInt(args[0])];
                                                           return intp.makeArray(arraySlice(args)); }
@@ -6488,6 +6496,7 @@ public class LambdaJ {
             case "sbit": return (CompilerPrimitive)this::_sbit;
             case "bvset": return (CompilerPrimitive)this::_bvset;
             case "bvlength": return (CompilerPrimitive)this::_bvlength;
+            case "char": return (CompilerPrimitive)this::_char;
             case "make-array": return (CompilerPrimitive)this::makeArray;
             case "listp": return (CompilerPrimitive)this::_listp;
             case "functionp": return (CompilerPrimitive)this::_functionp;
@@ -6726,7 +6735,7 @@ public class LambdaJ {
         "car", "cdr", "cons", "rplaca", "rplacd",
         /*"apply",*/ "eval", "eq", "eql", "null", "read", "write", "writeln", "lnwrite",
         "atom", "consp", "functionp", "listp", "symbolp", "numberp", "stringp", "characterp", "integerp", "floatp", "vectorp",
-        "assoc", "assq", "list", "vector", "svref", "svset", "svlength", "sbit", "bvset", "bvlength",
+        "assoc", "assq", "list", "vector", "svref", "svset", "svlength", "sbit", "bvset", "char", "bvlength",
         "append", "values",
         "round", "floor", "ceiling", "truncate",
         "fround", "ffloor", "fceiling", "ftruncate",
