@@ -32,7 +32,7 @@ mlib provides the following Common Lisp-like functions and macros:
 - [setf](#macro-setf), [incf, decf](#macro-incf-decf)
 - [push](#macro-push), [pop](#macro-pop)
 - [abs](#function-abs), [zerop](#function-zerop), [evenp](#function-evenp), [oddp](#function-oddp)
-- [char=](#function-char), [char](#function-char-1)
+- [char=](#function-char)
 - [equal](#function-equal)
 - [length](#function-length)
 - [reverse](#function-reverse)
@@ -474,13 +474,6 @@ Is this number odd?
 Since: 1.1
 
 Return `t` if all of the arguments are the same character.
-
-### Function: char
-    (char str n) -> nth-character
-
-Since: 1.1
-
-Return the n-th character of the string `str`, `n` is 0-based.
 
 ### Function: equal
     (equal a b) -> boolean
