@@ -21,6 +21,7 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
  * added bitvector support:
    * simple-vector-p, sbit, bvset and bvlength
    * list->simple-bit-vector and simple-bit-vector->list
+ * added char to Murmel (moved from mlib to the core language)
 
  * mlib: added function map
  * mlib: added generator related functions and macros
